2004-09-03  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-mem.c: (gc_pgbits) 
	Made static.

	* kaffe/kaffevm/kaffe-gc/gc-mem.h: (gc_pgbits) Removed.

	Reported by: Michael Franz <developer.franz@verizon.net>

2004-09-03  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-incremental.c, 
	kaffe/kaffevm/kaffe-gc/gc-mem.c: 
	Use gc_mem2block instead of GCMEM2BLOCK.
	(gc_mem2block) New function.

	* kaffe/kaffevm/kaffe-gc/gc-mem.h: (GCMEM2BLOCK) Removed.

2004-09-01  Kiyo Inaba <inaba@src.ricoh.co.jp>

	* config/m68k/jit-m68k.def,
	config/m68k/jit3-m68k.def: Unification of jit-m68k.def and
	jit3-m68k.def, step 1.

2004-09-01	jrandom <jrandom@i2p.net>

	* kaffe/libraries/clib/zip/Inflater.c: 
	(inflate0): Check for memory allocation error.
	(init): Likewise.
	
	* kaffe/libraries/clib/zip/Deflater.c: 
	(deflate): Likewise.
	(init): Likewise.

2004-09-01  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-mem.h (ASSERT_ONBLOCK): 
	Removed.
	
	* kaffe/kaffevm/kaffe-gc/gc-mem.c (ASSERT_ONBLOCK): 
	Moved over here.

2004-09-01  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-mem.h (KGC_OBJECT_SIZE): 
	Removed.
	
	* kaffe/kaffevm/kaffe-gc/gc-mem.c (KGC_OBJECT_SIZE): 
	Moved over here.

2004-09-01  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-mem.h: 
	(ROUNDUPPAGESIZE, GCBLOCK2BASE, gc_pgsize)
	Removed.
	
	* kaffe/kaffevm/kaffe-gc/gc-mem.c: 
	(ROUNDUPPAGESIZE, GCBLOCK2BASE) Moved here.
	(gc_pgsize) Made static.

	Reported by: Michael Franz <developer.franz@verizon.net>

2004-08-31	jrandom <jrandom@i2p.net>

	* kaffe/kaffevm/systems/unix-jthreads/jthread.c:
	(handleInterrupt): Dump the threads on SIGUSR2.
	(dumpJavaThreadLocal): Added.
	(dumpThreadsLocal): Added.
	(handleIO): Avoid a hang by limiting the maximum wait.

	* kaffe/kaffevm/systems/unix-jthreads/signal.c:
	(registerAsyncSignalHandler): accept SIGUSR2

2004-08-31	jrandom <jrandom@i2p.net>
