@@ -105,8 +105,8 @@ static int max_freelist;
 static size_t max_small_object_size;
 static size_t gc_heap_allocation_size;	/* amount of memory by which to grow heap */
 static size_t gc_heap_initial_size;	/* amount of memory to initially allocate */
+static size_t gc_heap_total;		/* current size of the heap */
 
-size_t gc_heap_total;		/* current size of the heap */
 size_t gc_heap_limit;		/* maximum size to which heap should grow */
 uintp gc_heap_base;
 uintp gc_heap_range;
@@ -1234,10 +1234,20 @@ gc_heap_grow(size_t sz)
 }
 
 /**
- * Evaluates to the gc_block that contains address @M.
+ * Evaluates to the gc_block that contains address @mem.
  *
  */
 gc_block *
-gc_mem2block(const void * mem) {
+gc_mem2block(const void * mem) 
+{
   return (KGC_BLOCKS + ( ( ((uintp) (mem)) - gc_heap_base) >> gc_pgbits));
+}
+
+/**
+ * Gets current heap size.
+ */
+size_t
+gc_get_heap_total(void)
+{
+  return gc_heap_total;
 }
