@@ -20,7 +20,6 @@
 #define ALIGNMENT_OF_SIZE(S)	(S)
 #endif
 
-extern size_t gc_heap_total;
 extern size_t gc_heap_limit;
 
 #ifdef KAFFE_VMDEBUG
@@ -65,6 +64,7 @@ extern void*	gc_heap_malloc(size_t);
 extern void	gc_heap_free(void*);
 
 extern void*	gc_heap_grow(size_t);
+extern size_t   gc_get_heap_total(void);
 
 /**
  * One block of the heap managed by kaffe's gc.
